--- a/ElectionCalculator/ElectionCalculatorView/MainWindow.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/MainWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="ElectionCalculatorView.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodels="clr-namespace:ElectionCalculatorView.ViewModel"
-        xmlns:views="clr-namespace:ElectionCalculatorView.View"
-        mc:Ignorable="d"
-        Title="Election Calculator" Height="450" Width="800">
+﻿<Window
+    x:Class="ElectionCalculatorView.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:ElectionCalculatorView.ViewModel"
+    xmlns:views="clr-namespace:ElectionCalculatorView.View"
+    Title="Election Calculator"
+    WindowStartupLocation="CenterScreen"
+    Width="1200"
+    Height="700"
+    mc:Ignorable="d">
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewmodels:LoginViewModel}">
             <views:LoginView />
