--- a/ElectionCalculator/ElectionCalculatorView/View/ElectionView.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/View/ElectionView.xaml
@@ -1,30 +1,47 @@
-﻿<UserControl x:Class="ElectionCalculatorView.View.ElectionView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ElectionCalculatorView.View"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <DockPanel>
-        <DockPanel.Resources>
+﻿<UserControl
+    x:Class="ElectionCalculatorView.View.ElectionView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ElectionCalculatorView.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="700"
+    d:DesignWidth="1200"
+    mc:Ignorable="d">
+    <StackPanel VerticalAlignment="Center">
+        <StackPanel.Resources>
             <DataTemplate x:Key="VoteCheckBox">
-                <CheckBox IsChecked="{Binding Path=IsChecked}">
-                </CheckBox>
+                <CheckBox IsChecked="{Binding Path=IsChecked}" />
             </DataTemplate>
-        </DockPanel.Resources>
-        <ListView  HorizontalAlignment="Center" DockPanel.Dock="Top" ItemsSource="{Binding Candidates}" IsSynchronizedWithCurrentItem="True">
+        </StackPanel.Resources>
+        <ListView
+            HorizontalAlignment="Center"
+            IsSynchronizedWithCurrentItem="True"
+            ItemsSource="{Binding Candidates}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Select" CellTemplate="{StaticResource VoteCheckBox}" />
-                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Path=Name}" />
-                    <GridViewColumn Header="Party" DisplayMemberBinding="{Binding Path=Party}" />
+                    <GridViewColumn CellTemplate="{StaticResource VoteCheckBox}" Header="Select" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Header="Name" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Party}" Header="Party" />
                 </GridView>
             </ListView.View>
         </ListView>
-        <StackPanel VerticalAlignment="Top" HorizontalAlignment="Center" DockPanel.Dock="Bottom" Orientation="Horizontal">
-            <Button Command ="{Binding VoteCmd}" Height="23" Width="80">Vote</Button>
-            <Button Command ="{Binding LogoutCmd}" Height="23" Width="80">Logout</Button>
+        <StackPanel
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Orientation="Horizontal">
+            <Button
+                Width="80"
+                Height="23"
+                Command="{Binding VoteCmd}">
+                Vote
+            </Button>
+            <Button
+                Width="80"
+                Height="23"
+                Command="{Binding LogoutCmd}">
+                Logout
+            </Button>
         </StackPanel>
-    </DockPanel>
+    </StackPanel>
 </UserControl>
