--- a/ElectionCalculator/ElectionCalculatorView/View/GraphView.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/View/GraphView.xaml
@@ -1,13 +1,62 @@
-﻿<UserControl x:Class="ElectionCalculatorView.View.GraphView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ElectionCalculatorView.View"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="ElectionCalculatorView.View.GraphView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:chartToolKit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ElectionCalculatorView.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="700"
+    d:DesignWidth="1200"
+    mc:Ignorable="d">
     <StackPanel>
-        <Button Command ="{Binding BackCmd}" Height="23" Width="80">Back</Button>
-        <Button Command ="{Binding LogoutCmd}" Height="23" Width="80">Logout</Button>
+        <chartToolKit:Chart
+            Name="candidatesBarChart"
+            Title="Candidates results"
+            Height="400"
+            VerticalAlignment="Top">
+            <chartToolKit:Chart.LegendStyle>
+                <Style TargetType="Control">
+                    <Setter Property="Width" Value="0" />
+                    <Setter Property="Height" Value="0" />
+                </Style>
+            </chartToolKit:Chart.LegendStyle>
+            <chartToolKit:BarSeries
+                DependentValuePath="NumberOfVotes"
+                IndependentValuePath="Candidate.Name"
+                ItemsSource="{Binding Data.Results}" />
+        </chartToolKit:Chart>
+
+        <chartToolKit:Chart
+            Name="partyBarChart"
+            Title="Parties results"
+            Height="200"
+            VerticalAlignment="Top">
+            <chartToolKit:Chart.LegendStyle>
+                <Style TargetType="Control">
+                    <Setter Property="Width" Value="0" />
+                    <Setter Property="Height" Value="0" />
+                </Style>
+            </chartToolKit:Chart.LegendStyle>
+            <chartToolKit:BarSeries
+                DependentValuePath="NumberOfVotes"
+                IndependentValuePath="Party"
+                ItemsSource="{Binding Data.PartiesResults}" />
+        </chartToolKit:Chart>
+
+        <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+            <Button
+                Width="80"
+                Height="23"
+                Command="{Binding BackCmd}">
+                Back
+            </Button>
+            <Button
+                Width="80"
+                Height="23"
+                Command="{Binding LogoutCmd}">
+                Logout
+            </Button>
+        </StackPanel>
     </StackPanel>
 </UserControl>
