--- a/ElectionCalculator/ElectionCalculatorView/View/LoginView.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/View/LoginView.xaml
@@ -1,26 +1,75 @@
-﻿<UserControl x:Class="ElectionCalculatorView.View.LoginView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ElectionCalculatorView.View"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+﻿<UserControl
+    x:Class="ElectionCalculatorView.View.LoginView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ElectionCalculatorView.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="700"
+    d:DesignWidth="1200"
+    mc:Ignorable="d">
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <StackPanel>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Height="23"   Text="First Name" Width="120"></TextBlock>
-                <TextBox Height="23"   Name="FirstName" Text="{Binding FirstName}" Width="120" />
+                <TextBlock
+                    Width="80"
+                    Height="23"
+                    Text="First Name" />
+                <TextBox
+                    Name="FirstName"
+                    Width="120"
+                    Height="23"
+                    Text="{Binding FirstName}" />
+                <TextBlock
+                    Width="120"
+                    Height="23"
+                    Margin="10,0"
+                    Foreground="Red"
+                    Text="First name is required"
+                    Visibility="{Binding IsFirstNameErrorVisible}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Height="23"   Text="Last Name" Width="120"></TextBlock>
-                <TextBox Height="23"   Name="LastName" Text="{Binding LastName}" Width="120" />
+                <TextBlock
+                    Width="80"
+                    Height="23"
+                    Text="Last Name" />
+                <TextBox
+                    Name="LastName"
+                    Width="120"
+                    Height="23"
+                    Text="{Binding LastName}" />
+                <TextBlock
+                    Width="120"
+                    Height="23"
+                    Margin="10,0"
+                    Foreground="Red"
+                    Text="Last name is required"
+                    Visibility="{Binding IsLastNameErrorVisible}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal">
-                <TextBlock Height="23"   Text="PESEL" Width="120"></TextBlock>
-                <TextBox Height="23"   Name="Pesel" Text="{Binding Pesel}" Width="120" />
+                <TextBlock
+                    Width="80"
+                    Height="23"
+                    Text="PESEL" />
+                <TextBox
+                    Name="Pesel"
+                    Width="120"
+                    Height="23"
+                    Text="{Binding Pesel}" />
+                <TextBlock
+                    Width="120"
+                    Height="23"
+                    Margin="10,0"
+                    Foreground="Red"
+                    Text="Invalid PESEL"
+                    Visibility="{Binding IsPeselErrorVisible}" />
             </StackPanel>
-            <Button Command ="{Binding LoginCmd}" Height="23" Width="80">Login</Button>
+            <Button
+                Width="80"
+                Height="23"
+                Command="{Binding LoginCmd}">
+                Login
+            </Button>
         </StackPanel>
     </Grid>
 </UserControl>
