--- a/ElectionCalculator/ElectionCalculatorView/View/ResultView.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/View/ResultView.xaml
@@ -1,60 +1,89 @@
-﻿<UserControl x:Class="ElectionCalculatorView.View.ResultView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ElectionCalculatorView.View"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="ElectionCalculatorView.View.ResultView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ElectionCalculatorView.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="700"
+    d:DesignWidth="1200"
+    mc:Ignorable="d">
 
-    <DockPanel>
-        <Grid DockPanel.Dock="Top">
+    <StackPanel VerticalAlignment="Center">
+        <Grid HorizontalAlignment="Center">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0">
-                <Label HorizontalAlignment="Center" Content="Result for candidates"></Label>
-                <ListView HorizontalAlignment="Stretch"  ItemsSource="{Binding Data.Results}" IsSynchronizedWithCurrentItem="True">
+                <Label HorizontalAlignment="Center" Content="Result for candidates" />
+                <ListView
+                    HorizontalAlignment="Stretch"
+                    IsSynchronizedWithCurrentItem="True"
+                    ItemsSource="{Binding Data.Results}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Number of votes" DisplayMemberBinding="{Binding Path=NumberOfVotes}" />
-                            <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Path=Candidate.Name}" />
-                            <GridViewColumn Header="Party" DisplayMemberBinding="{Binding Path=Candidate.Party}" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfVotes}" Header="Number of votes" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Candidate.Name}" Header="Name" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Candidate.Party}" Header="Party" />
                         </GridView>
                     </ListView.View>
                 </ListView>
             </StackPanel>
 
             <StackPanel Grid.Column="1">
-                <Label HorizontalAlignment="Center" Content="Result for parties"></Label>
-                <ListView  HorizontalAlignment="Center"  ItemsSource="{Binding Data.PartyResults}" IsSynchronizedWithCurrentItem="True">
+                <Label HorizontalAlignment="Center" Content="Result for parties" />
+                <ListView
+                    HorizontalAlignment="Center"
+                    IsSynchronizedWithCurrentItem="True"
+                    ItemsSource="{Binding Data.PartiesResults}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Number of votes" DisplayMemberBinding="{Binding Path=NumberOfVotes}" />
-                            <GridViewColumn Header="Party" DisplayMemberBinding="{Binding Path=Party}" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfVotes}" Header="Number of votes" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Party}" Header="Party" />
                         </GridView>
                     </ListView.View>
                 </ListView>
 
-                <StackPanel  HorizontalAlignment="Center" Orientation="Horizontal">
+                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
 
-                    <TextBlock Text ="Number of invalid votes" Height="23"></TextBlock>
-                    <TextBlock Margin="10,0,0,0" Text ="{Binding Data.NumberOfInvalidVotes}" Height="23"></TextBlock>
+                    <TextBlock Height="23" Text="Number of invalid votes" />
+                    <TextBlock
+                        Height="23"
+                        Margin="10,0,0,0"
+                        Text="{Binding Data.NumberOfInvalidVotes}" />
                 </StackPanel>
 
-                <StackPanel  DockPanel.Dock="Bottom" HorizontalAlignment="Center" Orientation="Horizontal">
+                <StackPanel
+                    HorizontalAlignment="Center"
+                    DockPanel.Dock="Bottom"
+                    Orientation="Horizontal">
 
-                    <TextBlock Text ="Number of votes without vote right" Height="23"></TextBlock>
-                    <TextBlock Margin="10,0,0,0" Text ="{Binding Data.NumberOfVotesWithoutRight}" Height="23"></TextBlock>
+                    <TextBlock Height="23" Text="Number of votes without vote right" />
+                    <TextBlock
+                        Height="23"
+                        Margin="10,0,0,0"
+                        Text="{Binding Data.NumberOfVotesWithoutRight}" />
                 </StackPanel>
             </StackPanel>
         </Grid>
-        <StackPanel DockPanel.Dock="Bottom" HorizontalAlignment="Center" Orientation="Horizontal">
+        <StackPanel
+            HorizontalAlignment="Center"
+                        Orientation="Horizontal">
 
-            <Button Command ="{Binding ShowGraphCmd}" Height="23" Width="80">Show graph</Button>
-            <Button Command ="{Binding LogoutCmd}" Height="23" Width="80">Logout</Button>
+            <Button
+                Width="80"
+                Height="23"
+                Command="{Binding ShowGraphCmd}">
+                Show graph
+            </Button>
+            <Button
+                Width="80"
+                Height="23"
+                Command="{Binding LogoutCmd}">
+                Logout
+            </Button>
         </StackPanel>
-    </DockPanel>
+    </StackPanel>
 </UserControl>
