--- a/ElectionCalculator/ElectionCalculatorView/View/ResultView.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/View/ResultView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ElectionCalculatorView.View"
+    xmlns:l="clr-namespace:ElectionCalculatorView.Resource"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="1200"
@@ -17,50 +17,53 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0">
-                <Label HorizontalAlignment="Center" Content="Result for candidates" />
+                <Label HorizontalAlignment="Center" Content="{x:Static l:Language.CandidatesResults}" />
                 <ListView
                     HorizontalAlignment="Stretch"
                     IsSynchronizedWithCurrentItem="True"
                     ItemsSource="{Binding Data.Results}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfVotes}" Header="Number of votes" />
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=Candidate.Name}" Header="Name" />
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=Candidate.Party}" Header="Party" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfVotes}" Header="{x:Static l:Language.NumberOfVotes}" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Candidate.Name}" Header="{x:Static l:Language.Name}" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Candidate.Party}" Header="{x:Static l:Language.Party}" />
                         </GridView>
                     </ListView.View>
                 </ListView>
             </StackPanel>
 
             <StackPanel Grid.Column="1">
-                <Label HorizontalAlignment="Center" Content="Result for parties" />
+                <Label HorizontalAlignment="Center" Content="{x:Static l:Language.PartiesResults}" />
                 <ListView
                     HorizontalAlignment="Center"
                     IsSynchronizedWithCurrentItem="True"
                     ItemsSource="{Binding Data.PartiesResults}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfVotes}" Header="Number of votes" />
-                            <GridViewColumn DisplayMemberBinding="{Binding Path=Party}" Header="Party" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=NumberOfVotes}" Header="{x:Static l:Language.NumberOfVotes}" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Party}" Header="{x:Static l:Language.Party}" />
                         </GridView>
                     </ListView.View>
                 </ListView>
 
                 <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                    <TextBlock Height="23" Text="{x:Static l:Language.NumberOfValidVotes}" />
+                    <TextBlock
+                        Height="23"
+                        Margin="10,0,0,0"
+                        Text="{Binding Data.NumberOfValidVotes}" />
+                </StackPanel>
 
-                    <TextBlock Height="23" Text="Number of invalid votes" />
+                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                    <TextBlock Height="23" Text="{x:Static l:Language.NumberOfInvalidVotes}" />
                     <TextBlock
                         Height="23"
                         Margin="10,0,0,0"
                         Text="{Binding Data.NumberOfInvalidVotes}" />
                 </StackPanel>
 
-                <StackPanel
-                    HorizontalAlignment="Center"
-                    DockPanel.Dock="Bottom"
-                    Orientation="Horizontal">
-
-                    <TextBlock Height="23" Text="Number of votes without vote right" />
+                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                    <TextBlock Height="23" Text="{x:Static l:Language.NumberOfVotesWithoutRight}" />
                     <TextBlock
                         Height="23"
                         Margin="10,0,0,0"
