--- a/ElectionCalculator/ElectionCalculatorView/View/ElectionView.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/View/ElectionView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ElectionCalculatorView.View"
+    xmlns:l="clr-namespace:ElectionCalculatorView.Resource"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="1200"
@@ -20,11 +20,9 @@
             ItemsSource="{Binding Candidates}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn CellTemplate="{StaticResource VoteCheckBox}" Header="Select" />
-                    <GridViewColumn
-                                                DisplayMemberBinding="{Binding Path=Name}"
-                        Header="Name" />
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Party}" Header="Party" />
+                    <GridViewColumn CellTemplate="{StaticResource VoteCheckBox}" Header="{x:Static l:Language.Select}" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Header="{x:Static l:Language.Name}" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Party}" Header="{x:Static l:Language.Party}" />
                 </GridView>
             </ListView.View>
         </ListView>
