--- a/ElectionCalculator/ElectionCalculatorView/View/LoginView.xaml
+++ b/ElectionCalculator/ElectionCalculatorView/View/LoginView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ElectionCalculatorView.View"
+    xmlns:l="clr-namespace:ElectionCalculatorView.Resource"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="1200"
@@ -14,7 +14,7 @@
                 <TextBlock
                     Width="80"
                     Height="23"
-                    Text="First Name" />
+                    Text="{x:Static l:Language.FirstName}" />
                 <TextBox
                     Name="FirstName"
                     Width="120"
@@ -25,14 +25,14 @@
                     Height="23"
                     Margin="10,0"
                     Foreground="Red"
-                    Text="First name is required"
+                    Text="{x:Static l:Language.RequiredFirstName}"
                     Visibility="{Binding IsFirstNameErrorVisible}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock
                     Width="80"
                     Height="23"
-                    Text="Last Name" />
+                    Text="{x:Static l:Language.LastName}" />
                 <TextBox
                     Name="LastName"
                     Width="120"
@@ -43,14 +43,14 @@
                     Height="23"
                     Margin="10,0"
                     Foreground="Red"
-                    Text="Last name is required"
+                    Text="{x:Static l:Language.RequiredLastName}"
                     Visibility="{Binding IsLastNameErrorVisible}" />
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock
                     Width="80"
                     Height="23"
-                    Text="PESEL" />
+                    Text="{x:Static l:Language.PESEL}" />
                 <TextBox
                     Name="Pesel"
                     Width="120"
@@ -61,7 +61,7 @@
                     Height="23"
                     Margin="10,0"
                     Foreground="Red"
-                    Text="Invalid PESEL"
+                    Text="{x:Static l:Language.InvalidPESEL}"
                     Visibility="{Binding IsPeselErrorVisible}" />
             </StackPanel>
             <Button
